# adapters-workspace

./: .gitignore  .release.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: test.yaml
puniyu_adapter_console/: CHANGELOG.md  Cargo.toml
puniyu_adapter_console/src/: common.rs  lib.rs
