[workspace]
members = ["puniyu_adapter_console"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/puniyu/adapters-workspace"
repository = "https://github.com/puniyu/adapters-workspace"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
log = { version = "0.4.32" }
bytes = { version = "1.11.1" }
tokio = { version = "1.52.3" }

puniyu_adapter = { version = "0.9.0" }

[profile.release]
lto = "fat"
opt-level = "z"
incremental = false

[profile.dev]
lto = false
opt-level = 1
incremental = true
