[package]
name = "puniyu_adapter_console"
version = "0.8.1"
description = "puniyu的控制台适配器"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
bytes.workspace = true
puniyu_adapter.workspace = true
puniyu_dispatch = { version = "0.8.16" }
tokio = { version = "1.52.3", features = ["signal", "sync"] }
rand = "0.10.0"
